# hermes

./: .bazelrc  .gitignore  ETHICS  MODULE.bazel  TODO.md  hermes_log.db
client/: BUILD  hermes.c  libmaildir.c  libmaildir.h
config/: classifiers.json
server/: BUILD
server/ch/execve/hermes/: BUILD  Classifier.java  ClassifierConfig.java  CommandLineArgs.java  DatabaseLogger.java  Dispatcher.java  HermesModule.java  HermesServer.java  SocketListener.java
server/ch/execve/hermes/classifier/: BUILD  Classifier.java  HeaderMatcher.java  Rule.java
tests/: BUILD  hermes_test.bzl  integration_test.sh
tests/config/: BUILD  alpacas.json  spam.json
tests/data/: BUILD  alpacas_1.msg  alpacas_2.msg  spam_bad_1.msg  spam_bad_2.msg  spam_bad_3.msg  spam_bad_4.msg  spam_good_1.msg  spam_good_2.msg  spam_good_3.msg  spam_good_4.msg
tests/infra/: BUILD  hermes_test.bzl  test_runner.sh
