module(
    name = "hermes",
    version = "0.0.1",
)

bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "rules_cc", version = "0.2.14")

java = use_extension("@rules_java//java:extensions.bzl", "java")
java.toolchain(
    name = "java_25_toolchain",
    version = "25",
)
use_repo(java, "remote_java_tools")

bazel_dep(name = "rules_jvm_external", version = "6.9")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.guava:guava:33.2.1-jre",
        "jakarta.mail:jakarta.mail-api:2.1.3",
        "org.eclipse.angus:angus-mail:2.0.3",
        "com.beust:jcommander:1.82",
        "com.fasterxml.jackson.core:jackson-databind:2.17.1",
        "com.google.inject:guice:7.0.0",
        "jakarta.inject:jakarta.inject-api:2.0.1",
    ],
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(maven, "maven")